--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -1,35 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true">
 
-        <Button android:id="@+id/analyse_btn"
+        <Button
+            android:id="@+id/analyse_select_file"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Capturing"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="Select File"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/analyse_selected_file"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="25dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintLeft_toRightOf="@id/analyse_select_file"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/select_file"/>
+
+        <Button
+            android:id="@+id/analyse_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="Review"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/analyse_select_file"/>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/analyse_filters"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:animateLayoutChanges="true"
+            app:layout_constraintTop_toBottomOf="@+id/analyse_btn">
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:animateLayoutChanges="true">
+
+                <TextView
+                    android:id="@+id/analyse_filter_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingLeft="20dp"
+                    android:text="Filters"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <ImageButton
+                    android:id="@+id/analyse_view_filters_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:background="@mipmap/view_filters_btn"/>
+
+                <RadioGroup
+                    android:id="@+id/analyse_filter_options"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@+id/analyse_filter_text"
+                    app:layout_constraintLeft_toLeftOf="parent">
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_1"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:checked="true"/>
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_2"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_3"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_4"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_5"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_6"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_7"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_8"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                </RadioGroup>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
         <EditText
             android:id="@+id/jump_page"
-            android:layout_width="250dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/analyse_btn"/>
+            app:layout_constraintTop_toBottomOf="@+id/analyse_filters"/>
         <Button
             android:id="@+id/jump_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jump To Page"
-            app:layout_constraintTop_toBottomOf="@+id/analyse_btn"
+            app:layout_constraintTop_toBottomOf="@+id/analyse_filters"
             app:layout_constraintLeft_toRightOf="@+id/jump_page"/>
-
     </android.support.constraint.ConstraintLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,6 +203,6 @@
     </LinearLayout>
 
 
+    </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
