--- a/FYPPacketSniffer/app/src/main/res/layout/layout_packet_capture_page.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_packet_capture_page.xml
@@ -8,8 +8,7 @@
     <ScrollView
         android:id="@+id/page_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/page_content"
