--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_one.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_one.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/fragText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:text="Tab 1"
         android:textSize="36sp" />
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbarSize="1dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <com.jjoe64.graphview.GraphView
+                android:layout_width = "700dp"
+                android:layout_height = "200dp"
+                android:id = "@+id/graph"
+                android:layout_marginLeft="20dp"
+                />
+        </LinearLayout>
+    </HorizontalScrollView>
 
-</RelativeLayout>
+
+
+
+</LinearLayout>
