--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -47,6 +47,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/analyse_select_file"/>
 
+        <Button
+            android:id="@+id/analyse_get_report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Get Report"
+            app:layout_constraintTop_toBottomOf="@id/analyse_select_file"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"/>
+
         <android.support.v7.widget.CardView
             android:id="@+id/analyse_filters"
             android:layout_width="match_parent"
@@ -178,9 +188,61 @@
 
                 </RadioGroup>
 
+                <RadioGroup
+                    android:id="@+id/analyse_hex_filters"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/analyse_filter_options"
+                    app:layout_constraintLeft_toLeftOf="parent">
+                    <RadioButton
+                        android:id="@+id/analyse_hex_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-x"
+                        android:textSize="20sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+                    <RadioButton
+                        android:id="@+id/analyse_hex_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-xx"
+                        android:textSize="20sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+                    <RadioButton
+                        android:id="@+id/analyse_hex_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-X"
+                        android:textSize="20sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+                    <RadioButton
+                    android:id="@+id/analyse_hex_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-XX"
+                    android:textSize="20sp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp" />
+                    <RadioButton
+                        android:id="@+id/analyse_hex_5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Normal"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+                </RadioGroup>
+
+
+
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
+
 
         <EditText
             android:id="@+id/jump_page"
@@ -215,7 +277,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No of Pages"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginBottom="100dp"/>
 
     </LinearLayout>
 
