--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
@@ -6,57 +6,78 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/capture_directory_btn"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:text="Directory"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/capture_file_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="10dp"
-                android:text="Output File Name:"
-                android:textSize="20sp"/>
+        <Button
+            android:id="@+id/capture_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Start Capture"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/capture_interface" />
 
-            <EditText
-                android:id="@+id/capture_file_name"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:textSize="20sp"
-                android:hint="eg. PCAP_001.pcap"
-                app:layout_constraintLeft_toRightOf="@id/capture_file_text"
-                app:layout_constraintTop_toTopOf="parent"/>
+        <EditText
+            android:id="@+id/capture_file_name"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:hint="eg. PCAP_001.pcap"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toRightOf="@id/capture_file_text"
+            app:layout_constraintTop_toBottomOf="@+id/capture_directory_text" />
 
-            <Button
-                android:id="@+id/capture_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/capture_interface"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="10dp"
-                android:text="Start Capture" />
+        <Spinner
+            android:id="@+id/capture_interface"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            app:layout_constraintLeft_toRightOf="@id/capture_text_interface"
+            app:layout_constraintTop_toBottomOf="@+id/capture_file_name" />
 
-            <Spinner
-                android:id="@+id/capture_interface"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@+id/capture_file_name"
-                app:layout_constraintLeft_toRightOf="@id/capture_text_interface"/>
+        <TextView
+            android:id="@+id/capture_file_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Output File Name:"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/capture_directory_btn" />
 
-            <TextView
-                android:id="@+id/capture_text_interface"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/capture_file_name"
-                android:layout_marginTop="10dp"
-                android:hint="Available Interfaces:"
-                android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/capture_directory_text"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:hint="Directory"
+            android:textSize="25sp"
+            app:layout_constraintLeft_toRightOf="@+id/capture_directory_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            android:maxLines="1"
+            android:ellipsize="end"/>
 
-        </android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/capture_text_interface"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="Available Interfaces:"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/capture_file_name" />
+
+    </android.support.constraint.ConstraintLayout>
 
         <TextView
             android:id="@+id/capture_num_page"
