--- a/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
-        android:background="@color/grey"
+        android:background="@color/white"
         app:itemTextColor="@color/black"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_menu"
