--- a/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
+++ b/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
@@ -40,7 +40,7 @@
             <item
                 android:id="@+id/about_us"
                 android:icon="@mipmap/about_us"
-                android:title="About Us" />
+                android:title="About App" />
         </menu>
     </item>
 </menu>
